# online-rec-sys

./: .gitignore  LICENSE  README.md  docker-compose.yml  init.sql  pyproject.toml
data/: eda.ipynb
online_learning_demo/: api.py  config.py  run.py
online_learning_demo/recsys/: recsys.py
online_learning_demo/scripts/: load_dataset.py  make_recsys_state.py  vectorize.py
online_learning_demo/templates/: home.html  rows.html  template.html
